--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,12 @@ android {
     }
 }
 
+repositories {
+    mavenCentral() {
+        url "https://repo1.maven.org/maven2/net/mikera/vectorz"
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -50,4 +56,6 @@ dependencies {
     implementation "com.android.support:support-v13:28.0.0"
     implementation "com.android.support:cardview-v7:28.0.0"
     implementation "com.android.support:appcompat-v7:28.0.0"
+    //Vectorz library
+    implementation "net.mikera:vectorz:0.67.0"
 }
