--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,12 @@ android {
     }
 }
 
+repositories {
+    mavenCentral() {
+        url "https://repo1.maven.org/maven2/net/mikera/vectorz"
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -42,4 +48,5 @@ dependencies {
     implementation "androidx.camera:camera-core:$camerax_version"
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "net.mikera:vectorz:0.67.0"
 }
