Update vectorz to install from submodule
Moved vectorz to a local submodule since we have to rebuild it
using the same java version that we use for the Android app.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,10 @@
 include ':app'
+include 'third_party:compat:vectorz'
+
 rootProject.name='MediaPipeMultiHandsTrackingApp'
+
+// sourceControl {
+//     gitRepository("https://github.com/mikera/vectorz") {
+//         producesModule("net.mikera:vectorz")
+//     }
+// }
