--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.1"
+    //buildToolsVersion "29.0.1"
     defaultConfig {
         applicationId "com.handapp.mediapipebluetooth"
         minSdkVersion 21
@@ -18,16 +18,14 @@ android {
         }
     }
     compileOptions {
-        targetCompatibility = 1.8
-        sourceCompatibility = 1.8
+        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_1_8
+    }
+    lintOptions {
+        abortOnError false
     }
 }
 
-repositories {
-    mavenCentral() {
-        url "https://repo1.maven.org/maven2/net/mikera/vectorz"
-    }
-}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
@@ -48,5 +46,7 @@ dependencies {
     implementation "androidx.camera:camera-core:$camerax_version"
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "net.mikera:vectorz:0.67.0"
+    
+    // Local dependencies
+    implementation(project(":third_party:compat:vectorz"))
 }
