--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: eskatos/gradle-command-action@v1
+      with:
+        gradle-version: 3.4.2
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
