--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: eskatos/gradle-command-action@v1
+    - name: Build all artifacts
+      id: buildAllApks
+      uses: eskatos/gradle-command-action@v1.3.3
       with:
-        gradle-version: 3.4.2
+        gradle-version: current
+        wrapper-cache-enabled: true
+        dependencies-cache-enabled: true
+        configuration-cache-enabled: true
+        arguments: assembleRelease    
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
