--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       id: buildAllApks
       uses: eskatos/gradle-command-action@v1.3.3
       with:
-        gradle-version: current
+        gradle-version: 3.4.1
         wrapper-cache-enabled: true
         dependencies-cache-enabled: true
         configuration-cache-enabled: true
