--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,15 @@ jobs:
         java-version: 1.8     
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    - name: Build all artifacts
+      id: buildAllApks
+      uses: eskatos/gradle-command-action@v1.3.3
+      with:
+        gradle-version: current
+        wrapper-cache-enabled: true
+        dependencies-cache-enabled: true
+        configuration-cache-enabled: true
+        arguments: assembleRelease      
     - name: Build with Gradle
       run: ./gradlew build
     - uses: actions/upload-artifact@v2
