--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew  
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build --debug
     - uses: actions/upload-artifact@v2
       with:
         name: Package
