Update gradle build settings

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # End of https://www.gitignore.io/api/java,gradle
+
+# Build directory for extra packaging for third party libraries
+third_party/compat/**/build
