--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,5 @@ jobs:
       run: chmod +x gradlew  
     - name: Build with Gradle
       run: ./gradlew build
-    - uses: actions/upload-artifact@v2
-      with:
-        name: Package
-        path: build/libs
+    - name: Run Unit Tests
+      run: ./gradlew test        
